crates/core/tests/snapshots/corpus__高知大学科目等履修生規則@高知大学科目等履修生規則.pdf.snap
---
source: tests/corpus.rs
expression: doc
input_file: sources/高知大学科目等履修生規則.pdf
---
{
  "title": "高知大学科目等履修生規則",
  "enacted": {
    "date": {
      "era": "heisei",
      "year": 24,
      "month": 3,
      "day": 28,
      "iso": "2012-03-28"
    },
    "rule_number": {
      "number": 109,
      "year": null,
      "raw": "規則第 109 号"
    },
    "raw": "平成24年３月28日 規則第 109 号"
  },
  "last_amended": {
    "date": {
      "era": "reiwa",
      "year": 8,
      "month": 3,
      "day": 17,
      "iso": "2026-03-17"
    },
    "rule_number": {
      "number": 109,
      "year": null,
      "raw": "規則第109号"
    },
    "raw": "最終改正  令和８年３月17日規則第109号"
  },
  "full_amendment_note": null,
  "body": [
    {
      "type": "article",
      "number": {
        "main": 1,
        "branch": null
      },
      "title": "趣旨",
      "paragraphs": [
        {
          "number": 1,
          "text": "この規則は、高知大学学則第23条第２項の規定に基づき、高知大学（以下「本学」という｡）における科目等履修生に関し必要な事項を定める。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "main": 2,
        "branch": null
      },
      "title": "入学資格",
      "paragraphs": [
        {
          "number": 1,
          "text": "学部の科目等履修生として入学することのできる者は、高等学校を卒業した者又はこれと同等以上の学力があると認められる者とする。ただし、本学学部において開設する授業科目のうち、本学があらかじめ指定する授業科目の履修を希望する高等学校又は中等教育学校後期課程の生徒で、本学が適当と認めた者については、この限りでない。",
          "items": []
        },
        {
          "number": 2,
          "text": "大学院修士課程及び専門職学位課程の科目等履修生として入学することのできる者は、学士の学位を有する者又はこれと同等以上の学力があると認められる者とする。ただし、本学大学院において開設する授業科目のうち、本学があらかじめ指定する授業科目の履修を希望する他大学の学部学生及び高等専門学校専攻科の学生で、本学が適当と認めた者については、この限りでない。",
          "items": []
        },
        {
          "number": 3,
          "text": "大学院博士課程の科目等履修生として入学することのできる者は、修士の学位若しくは専門職学位を有する者又はこれと同等以上の学力があると認められる者とする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "main": 3,
        "branch": null
      },
      "title": "出願手続",
      "paragraphs": [
        {
          "number": 1,
          "text": "科目等履修生として本学に入学を志願する者は、次の各号に掲げる書類に検定料を添えて、学部長又は研究科長に提出しなければならない。",
          "items": [
            {
              "number": 1,
              "text": "入学願書",
              "subitems": []
            },
            {
              "number": 2,
              "text": "履歴書",
              "subitems": []
            },
            {
              "number": 3,
              "text": "最終学校の卒業又は修了証明書",
              "subitems": []
            },
            {
              "number": 4,
              "text": "その他学部又は研究科が必要と認める書類",
              "subitems": []
            }
          ]
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "main": 4,
        "branch": null
      },
      "title": "入学者の選考",
      "paragraphs": [
        {
          "number": 1,
          "text": "前条の入学志願者については、学部教授会又は研究科委員会において選考を行う。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "main": 5,
        "branch": null
      },
      "title": "入学許可",
      "paragraphs": [
        {
          "number": 1,
          "text": "前条の選考により合格した者は、所定の期日までに入学料を納付しなければならない。",
          "items": []
        },
        {
          "number": 2,
          "text": "学長は、前項の手続を完了した者に入学を許可する。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "main": 6,
        "branch": null
      },
      "title": "入学の時期",
      "paragraphs": [
        {
          "number": 1,
          "text": "科目等履修生の入学の時期は、原則として学年又は学期の初めとする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "main": 7,
        "branch": null
      },
      "title": "在学期間",
      "paragraphs": [
        {
          "number": 1,
          "text": "在学期間は、入学を許可された年度内とする。ただし、引き続き授業科目を履修する場合は、在学期間を延長することができる。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "main": 8,
        "branch": null
      },
      "title": "単位の授与",
      "paragraphs": [
        {
          "number": 1,
          "text": "授業科目を履修し、その試験に合格した者には、所定の単位を与える。",
          "items": []
        },
        {
          "number": 2,
          "text": "学部長又は研究科長は、前項の規定により単位を与えられた者から申出があったときは、単位修得証明書を交付する。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "main": 9,
        "branch": null
      },
      "title": "授業料の納付",
      "paragraphs": [
        {
          "number": 1,
          "text": "科目等履修生は、授業科目の開講学期に応じて第１学期及び第２学期に区分し、履修する授業科目の単位数分（通年開講科目は、第１学期分とする。）に相当する額を国立大学法人高知大学における授業料等費用に関する規則（以下「費用規則」という。）第４条第２項に定める徴収時期に納付するものとする。ただし、入学の時期が徴収の時期後である場合には、入学の日の属する月に納付するものとする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "main": 10,
        "branch": null
      },
      "title": "検定料、入学料及び授業料",
      "paragraphs": [
        {
          "number": 1,
          "text": "科目等履修生の検定料、入学料及び授業料の額は、費用規則の定めるところによる。",
          "items": []
        },
        {
          "number": 2,
          "text": "既納の検定料、入学料及び授業料は、還付しない。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "main": 11,
        "branch": null
      },
      "title": "履修の中止",
      "paragraphs": [
        {
          "number": 1,
          "text": "本学の規則に違反した者又は病気その他の理由により科目等履修生として不適当と認められる者に対しては、学部長又は研究科長からの申出に基づき、学長が授業科目の履修の中止を命ずる。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "main": 12,
        "branch": null
      },
      "title": "大学院総合人間自然科学研究科修士課程及び専門職学位課程の学生に関する特例",
      "paragraphs": [
        {
          "number": 1,
          "text": "大学院総合人間自然科学研究科修士課程及び専門職学位課程在学者のうち、別に定める日本語教員養成プログラムを履修しようとする者については、第３条、第５条第１項及び第９条の規定にかかわらず、検定料、入学料及びプログラムの履修に関する授業料は、徴収しない。",
          "items": []
        },
        {
          "number": 2,
          "text": "大学院総合人間自然科学研究科修士課程及び専門職学位課程在学者のうち、教育職員免許状取得を目的に学部の科目等履修生として入学を希望し、別に定める特例措置を利用して教育職員免許状取得に必要な授業科目を履修しようとする者については、第３条、第５条第１項及び第９条の規定にかかわらず、検定料、入学料及び当該履修に関する授業料は、徴収しない。",
          "items": []
        },
        {
          "number": 3,
          "text": "同時に複数の前２項の規定による履修（同時に複数の教育職員免許状を取得するため、特例措置を利用しようとする場合を含む。ただし、同一の教科に係る中学校教諭及び高等学校教諭一種免許状を取得しようとする場合を除く。）をしようとする者については、前２項の規定にかかわらず、最初に第４項の規定に基づき申請し履修を認められた履修以外の履修に関する授業料を徴収するものとする。",
          "items": []
        },
        {
          "number": 4,
          "text": "第１項及び第２項に規定する者の出願手続については、第３条に規定する書類に代えて、別に定める「日本語教員養成プログラム（科目等履修生）履修申請書」又は「科目等履修生（特例措置利用）申請書」を提出するものとする。",
          "items": []
        },
        {
          "number": 5,
          "text": "第１項及び第２項に規定する者の入学許可については、第５条第２項中「前項の手続を完了した者」とあるのは「選考に合格した者」と読み替えるものとする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "main": 12,
        "branch": 2
      },
      "title": "履修証明プログラム履修生に関する特例",
      "paragraphs": [
        {
          "number": 1,
          "text": "履修証明プログラム（高知大学学則第84条の２に規定するものをいう。以下同じ。）の履修を希望する者が、履修証明プログラムに含まれる授業科目の科目等履修生として入学を志願する場合は、第３条、第５条第１項及び第９条の規定にかかわらず、検定料、入学料及び当該科目の授業料は、徴収しない。",
          "items": []
        },
        {
          "number": 2,
          "text": "前項に規定する場合における出願手続については、第３条に規定する書類に代えて、高知大学履修証明プログラム規則第８条に規定する書類を提出するものとする。",
          "items": []
        },
        {
          "number": 3,
          "text": "第１項に規定する場合における入学許可については、第５条第２項中「前項の手続を完了した者」とあるのは「選考に合格した者」と読み替えるものとする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "main": 12,
        "branch": 3
      },
      "title": "高度情報専門人材育成早期履修プログラム参加者に関する特例",
      "paragraphs": [
        {
          "number": 1,
          "text": "第２条第２項ただし書に定める者のうち、別に定める高度情報専門人材育成早期履修プログラムに参加しようとする者については、第３条、第５条第１項及び第９条の規定にかかわらず、検定料、入学料及び当該プログラムにおいて履修する授業科目の授業料は、徴収しない。",
          "items": []
        },
        {
          "number": 2,
          "text": "前項に規定する者の出願手続については、第３条に規定する書類に代えて、別に定める「高度情報専門人材育成早期履修プログラム推薦書」を提出するものとする。",
          "items": []
        },
        {
          "number": 3,
          "text": "第１項に規定する者の入学許可については、第５条第２項中「前項の手続を完了した者」とあるのは「選考に合格した者」と読み替えるものとする。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "main": 13,
        "branch": null
      },
      "title": "規則の準用",
      "paragraphs": [
        {
          "number": 1,
          "text": "科目等履修生については、この規則に定めるもののほか、高知大学学則その他本学学生に関する規則を準用する。",
          "items": []
        }
      ]
    },
    {
      "type": "article",
      "number": {
        "main": 14,
        "branch": null
      },
      "title": "雑則",
      "paragraphs": [
        {
          "number": 1,
          "text": "この規則に定めるもののほか、科目等履修生に関し必要な事項は、学部又は研究科において別に定める。",
          "items": []
        }
      ]
    }
  ],
  "supplementary_provisions": [
    {
      "ordinal": 1,
      "heading_raw": "附  則",
      "amendment": null,
      "promulgated": null,
      "effective": {
        "kind": "date",
        "era": "heisei",
        "year": 24,
        "month": 4,
        "day": 1,
        "iso": "2012-04-01"
      },
      "text": "１  この規則は、平成24年４月１日から施行する。\n２  高知大学科目等履修生規則（平成16年規則第138号）及び高知大学大学院科目等履修生\n規則（平成16年規則第314号）は、廃止する。",
      "references_tables": []
    },
    {
      "ordinal": 2,
      "heading_raw": "附  則（平成24年６月27日規則第28号）",
      "amendment": {
        "number": 28,
        "year": null,
        "raw": "規則第28号"
      },
      "promulgated": {
        "era": "heisei",
        "year": 24,
        "month": 6,
        "day": 27,
        "iso": "2012-06-27"
      },
      "effective": {
        "kind": "date",
        "era": "heisei",
        "year": 24,
        "month": 10,
        "day": 1,
        "iso": "2012-10-01"
      },
      "text": "この規則は、平成24年10月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 3,
      "heading_raw": "附  則（平成25年１月23日規則第60号）",
      "amendment": {
        "number": 60,
        "year": null,
        "raw": "規則第60号"
      },
      "promulgated": {
        "era": "heisei",
        "year": 25,
        "month": 1,
        "day": 23,
        "iso": "2013-01-23"
      },
      "effective": {
        "kind": "date",
        "era": "heisei",
        "year": 25,
        "month": 1,
        "day": 23,
        "iso": "2013-01-23"
      },
      "text": "この規則は、平成25年１月23日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 4,
      "heading_raw": "附  則（平成29年11月27日規則第30号）",
      "amendment": {
        "number": 30,
        "year": null,
        "raw": "規則第30号"
      },
      "promulgated": {
        "era": "heisei",
        "year": 29,
        "month": 11,
        "day": 27,
        "iso": "2017-11-27"
      },
      "effective": {
        "kind": "date",
        "era": "heisei",
        "year": 30,
        "month": 4,
        "day": 1,
        "iso": "2018-04-01"
      },
      "text": "この規則は、平成30年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 5,
      "heading_raw": "附  則（令和２年３月24日規則第92号）",
      "amendment": {
        "number": 92,
        "year": null,
        "raw": "規則第92号"
      },
      "promulgated": {
        "era": "reiwa",
        "year": 2,
        "month": 3,
        "day": 24,
        "iso": "2020-03-24"
      },
      "effective": {
        "kind": "date",
        "era": "reiwa",
        "year": 2,
        "month": 4,
        "day": 1,
        "iso": "2020-04-01"
      },
      "text": "この規則は、令和２年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 6,
      "heading_raw": "附  則（令和５年３月24日規則第112号）",
      "amendment": {
        "number": 112,
        "year": null,
        "raw": "規則第112号"
      },
      "promulgated": {
        "era": "reiwa",
        "year": 5,
        "month": 3,
        "day": 24,
        "iso": "2023-03-24"
      },
      "effective": {
        "kind": "date",
        "era": "reiwa",
        "year": 5,
        "month": 4,
        "day": 1,
        "iso": "2023-04-01"
      },
      "text": "この規則は、令和５年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 7,
      "heading_raw": "附  則（令和６年９月19日規則第36号）",
      "amendment": {
        "number": 36,
        "year": null,
        "raw": "規則第36号"
      },
      "promulgated": {
        "era": "reiwa",
        "year": 6,
        "month": 9,
        "day": 19,
        "iso": "2024-09-19"
      },
      "effective": {
        "kind": "date",
        "era": "reiwa",
        "year": 7,
        "month": 4,
        "day": 1,
        "iso": "2025-04-01"
      },
      "text": "この規則は、令和７年４月１日から施行する。",
      "references_tables": []
    },
    {
      "ordinal": 8,
      "heading_raw": "附  則（令和８年３月17日規則第109号）",
      "amendment": {
        "number": 109,
        "year": null,
        "raw": "規則第109号"
      },
      "promulgated": {
        "era": "reiwa",
        "year": 8,
        "month": 3,
        "day": 17,
        "iso": "2026-03-17"
      },
      "effective": {
        "kind": "date",
        "era": "reiwa",
        "year": 8,
        "month": 4,
        "day": 1,
        "iso": "2026-04-01"
      },
      "text": "この規則は、令和８年４月１日から施行する。",
      "references_tables": []
    }
  ],
  "appendices": []
}
